[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "itemtask"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [
  "Marcin Josiński <josinski@outlook.com>"
]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11"
psycopg2 = "^2.8"


[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-django = "^3.8"
pytest-cov = "^2.8"
factory_boy = "^3.0"
black = "^20.8b1"
flake8 = "^3.8"
